<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_save"
          android:icon="@drawable/ic_menu_save"
          android:alphabeticShortcut='s'
          android:title="@string/menu_save"
          android:showAsAction="ifRoom|withText" />
    <item android:id="@+id/menu_revert"
          android:icon="@drawable/ic_menu_revert"
          android:title="@string/menu_revert" />
    <item android:id="@+id/menu_delete"
          android:icon="@drawable/ic_menu_delete"
          android:title="@string/menu_delete"
          android:showAsAction="ifRoom|withText" />
    <item android:id="@+id/menu_change_note_theme"
          android:icon="@drawable/ic_menu_edit"
          android:title="@string/menu_change_note_theme"
          android:showAsAction="never" />
    <item android:id="@+id/menu_export_note"
          android:icon="@drawable/ic_menu_save"
          android:title="@string/menu_export_note"
          android:showAsAction="never" />
    <item android:id="@+id/menu_send_to_home"
          android:icon="@drawable/ic_menu_edit"
          android:title="发送到桌面"
          android:showAsAction="never" />
    <item android:id="@+id/menu_set_reminder"
          android:icon="@drawable/ic_menu_edit"
          android:title="@string/menu_set_reminder"
          android:showAsAction="never" />
    <item android:id="@+id/menu_clear_reminder"
          android:icon="@drawable/ic_menu_revert"
          android:title="@string/menu_clear_reminder"
          android:showAsAction="never" />
</menu>
