<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!--  This is our one standard application action (creating a new note). -->
    <item android:id="@+id/menu_add"
          android:icon="@drawable/ic_menu_compose"
          android:title="@string/menu_add"
          android:alphabeticShortcut='a'
          android:showAsAction="always" />
    <!--  If there is currently data in the clipboard, this adds a PASTE menu item to the menu
          so that the user can paste in the data.. -->
    <item android:id="@+id/menu_paste"
          android:icon="@drawable/ic_menu_compose"
          android:title="@string/menu_paste"
          android:alphabeticShortcut='p' />
    <item android:id="@+id/menu_search"
          android:icon="@android:drawable/ic_menu_search"
          android:title="@string/menu_search"
          android:showAsAction="always|collapseActionView"
          android:actionViewClass="android.widget.SearchView" />
    <item android:id="@+id/menu_change_theme"
          android:icon="@drawable/ic_menu_edit"
          android:title="@string/menu_change_theme"
          android:showAsAction="never" />
    <item android:id="@+id/menu_layout"
          android:title="笔记表格布局"
          android:showAsAction="never" />
    <item android:id="@+id/menu_sort"
          android:title="排序方式"
          android:showAsAction="never" />
    <item android:id="@+id/menu_font_size"
          android:title="文字大小"
          android:showAsAction="never" />
</menu>
